# segmentation_task

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml  test.py
.dvc/: config
data/: .gitignore  output.dvc  stage1_test.dvc  stage1_train.dvc
dataloader/: dataloader.py  transform.py
docker/: Dockerfile  docker-compose.yml  requirements.txt  setup.sh
docs/source/: conf.py  dataloader.rst  index.rst  model.rst  modules.rst
etc/: config.yml
model/: dice_loss.py  iou.py  unet.py
scripts/: train.sh
src/: train.py
utils/: utils.py
