[tool.poetry]
name = "segmentation-task"
version = "0.1.0"
description = ""
authors = ["SotaChambers <snakamura@ridge-i.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
ipykernel = "^6.19.4"
segmentation-models-pytorch = "^0.3.1"
matplotlib = "^3.6.2"
albumentations = "^1.3.0"
flake8 = "^6.0.0"
pandas = "^1.5.2"
dvc = "^2.38.1"
dvc-gdrive = "^2.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
